--- a/src/main/resources/edu/metrostate/fitnessmanagementsystem/admin.fxml
+++ b/src/main/resources/edu/metrostate/fitnessmanagementsystem/admin.fxml
@@ -35,7 +35,7 @@
                                     <FontAwesomeIconView glyphName="CLOSE" size="1.2em" />
                                  </graphic>
                               </Button>
-                              <Button fx:id="minimize_btn" layoutX="1018.0" layoutY="1.0" minWidth="34.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="34.0" styleClass="minimize-btn" stylesheets="@adminDesign.css">
+                              <Button fx:id="minimize_btn" layoutX="1018.0" layoutY="2.0" minWidth="34.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="34.0" styleClass="minimize-btn" stylesheets="@adminDesign.css">
                                  <graphic>
                                     <FontAwesomeIconView glyphName="MINUS" size="1.2em" />
                                  </graphic></Button>
@@ -207,7 +207,7 @@
                                           <Font size="15.0" />
                                        </font>
                                     </Label>
-                                    <TextArea fx:id="trainer_address" layoutX="123.0" layoutY="171.0" prefHeight="70.0" prefWidth="150.0" />
+                                    <TextArea fx:id="trainer_address" layoutX="123.0" layoutY="171.0" prefHeight="70.0" prefWidth="150.0" styleClass="textfield" stylesheets="@adminDesign.css" />
                                     <Label layoutX="61.0" layoutY="259.0" text="Gender:">
                                        <font>
                                           <Font size="15.0" />
@@ -228,7 +228,7 @@
                                           <String fx:value="shadow" />
                                           <String fx:value="btn" />
                                        </styleClass></Button>
-                                    <Button fx:id="trainer_deletebtn" layoutX="153.0" layoutY="397.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="104.0" stylesheets="@adminDesign.css" text="Delete">
+                                    <Button fx:id="trainer_deletebtn" layoutX="153.0" layoutY="397.0" mnemonicParsing="false" onAction="#trainerDeleteBtn" prefHeight="50.0" prefWidth="104.0" stylesheets="@adminDesign.css" text="Delete">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -244,7 +244,7 @@
                                           <String fx:value="shadow" />
                                           <String fx:value="btn" />
                                        </styleClass></Button>
-                                    <Button fx:id="trainer_updatebtn" layoutX="153.0" layoutY="459.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="104.0" stylesheets="@adminDesign.css" text="Update">
+                                    <Button fx:id="trainer_updatebtn" layoutX="153.0" layoutY="459.0" mnemonicParsing="false" onAction="#trainersUpdateBtn" prefHeight="50.0" prefWidth="104.0" stylesheets="@adminDesign.css" text="Update">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -266,7 +266,7 @@
                                     <String fx:value="shadow" />
                                  </styleClass>
                                  <children>
-                                    <TableView fx:id="trainer_tableView" layoutX="4.0" layoutY="4.0" prefHeight="515.0" prefWidth="535.0" stylesheets="@adminDesign.css">
+                                    <TableView fx:id="trainer_tableView" layoutX="4.0" layoutY="4.0" onMouseClicked="#trainersSelect" prefHeight="515.0" prefWidth="535.0" stylesheets="@adminDesign.css">
                                       <columns>
                                         <TableColumn fx:id="trainer_col_trainerID" prefWidth="75.0" text="Trainer ID" />
                                         <TableColumn fx:id="trainer_col_trainerName" prefWidth="54.0" text="Name" />
