--- a/src/main/resources/edu/metrostate/fitnessmanagementsystem/trainer.fxml
+++ b/src/main/resources/edu/metrostate/fitnessmanagementsystem/trainer.fxml
@@ -100,7 +100,7 @@
                                           <Font name="Tahoma" size="16.0" />
                                        </font>
                                     </Label>
-                                    <Button fx:id="fitnessplan_btn" layoutX="166.0" layoutY="222.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="104.0" stylesheets="@trainerDesign.css" text="Send">
+                                    <Button fx:id="fitnessplan_btn" layoutX="166.0" layoutY="222.0" mnemonicParsing="false" onAction="#sendFitnessPlan" prefHeight="50.0" prefWidth="104.0" stylesheets="@trainerDesign.css" text="Send">
                                        <font>
                                           <Font name="Arial" size="15.0" />
                                        </font>
