--- a/src/main/resources/edu/metrostate/fitnessmanagementsystem/client.fxml
+++ b/src/main/resources/edu/metrostate/fitnessmanagementsystem/client.fxml
@@ -46,7 +46,7 @@
                            </children>
                         </AnchorPane>
                         <FontAwesomeIconView glyphName="USER" layoutX="40.0" layoutY="128.0" size="8em" />
-                        <Label layoutX="43.0" layoutY="142.0" text="Client">
+                        <Label fx:id="clientUser" alignment="CENTER" layoutX="4.0" layoutY="142.0" prefHeight="32.0" prefWidth="136.0" text="Client">
                            <font>
                               <Font name="Tahoma" size="25.0" />
                            </font>
@@ -75,7 +75,7 @@
                <left>
                   <AnchorPane prefHeight="397.0" prefWidth="900.0" BorderPane.alignment="CENTER">
                      <children>
-                        <AnchorPane fx:id="clientProfile_Form" layoutX="57.0" layoutY="75.0" prefHeight="397.0" prefWidth="900.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane fx:id="clientProfile_Form" layoutX="57.0" layoutY="75.0" prefHeight="397.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <AnchorPane layoutX="15.0" layoutY="12.0" prefHeight="374.0" prefWidth="871.0" stylesheets="@trainerDesign.css">
                                  <styleClass>
@@ -144,7 +144,7 @@
                               </AnchorPane>
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="clientTrainer_Form" layoutX="39.0" layoutY="36.0" prefHeight="397.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane fx:id="clientTrainer_Form" layoutX="39.0" layoutY="36.0" prefHeight="397.0" prefWidth="900.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <AnchorPane layoutX="18.0" layoutY="14.0" prefHeight="361.0" prefWidth="865.0" stylesheets="@trainerDesign.css">
                                  <styleClass>
@@ -152,7 +152,7 @@
                                     <String fx:value="shadow" />
                                  </styleClass>
                                  <children>
-                                    <Button fx:id="clientAdd_trainer" layoutX="747.0" layoutY="130.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="104.0" stylesheets="@adminDesign.css" text="Add">
+                                    <Button fx:id="clientAdd_trainer" layoutX="747.0" layoutY="130.0" mnemonicParsing="false" onAction="#clientAddTrainer" prefHeight="50.0" prefWidth="104.0" stylesheets="@adminDesign.css" text="Add">
                                        <font>
                                           <Font name="Arial" size="15.0" />
                                        </font>
