--- a/src/main/resources/edu/metrostate/fitnessmanagementsystem/main-login.fxml
+++ b/src/main/resources/edu/metrostate/fitnessmanagementsystem/main-login.fxml
@@ -19,7 +19,7 @@
       <children>
         <AnchorPane fx:id="signup_form" prefHeight="500.0" prefWidth="350.0">
           <children>
-            <FontAwesomeIconView glyphName="USER_PLUS" layoutX="132.0" layoutY="147.0" size="10em" styleClass="user">
+            <FontAwesomeIconView glyphName="USER_PLUS" layoutX="132.0" layoutY="123.0" size="10em" styleClass="user">
               <fill>
                 <LinearGradient endX="1.0" endY="1.0">
                   <stops>
@@ -37,19 +37,20 @@
                 </LinearGradient>
               </fill>
             </FontAwesomeIconView>
-            <Label layoutX="141.0" layoutY="165.0" text="Sign Up">
+            <Label layoutX="141.0" layoutY="141.0" text="Sign Up">
               <font>
                 <Font name="Berlin Sans FB" size="25.0" />
               </font>
             </Label>
-            <TextField fx:id="su_username" layoutX="21.0" layoutY="267.0" prefHeight="45.0" prefWidth="320.0" promptText="Username" styleClass="textfield" stylesheets="@loginDesign.css" />
-            <TextField fx:id="su_email" layoutX="21.0" layoutY="213.0" prefHeight="45.0" prefWidth="320.0" promptText="Email" styleClass="textfield" stylesheets="@loginDesign.css" />
-            <PasswordField fx:id="su_password" layoutX="21.0" layoutY="323.0" prefHeight="45.0" prefWidth="320.0" promptText="password" styleClass="textfield" stylesheets="@loginDesign.css" />
-            <Button fx:id="su_signupBtn" layoutX="80.0" layoutY="384.0" mnemonicParsing="false" onAction="#signup" prefHeight="45.0" prefWidth="220.0" styleClass="login-btn" stylesheets="@loginDesign.css" text="SignUp" textFill="WHITE">
+            <TextField fx:id="su_username" layoutX="22.0" layoutY="324.0" prefHeight="45.0" prefWidth="320.0" promptText="Username" styleClass="textfield" stylesheets="@loginDesign.css" />
+            <TextField fx:id="su_email" layoutX="22.0" layoutY="270.0" prefHeight="45.0" prefWidth="320.0" promptText="Email" styleClass="textfield" stylesheets="@loginDesign.css" />
+            <PasswordField fx:id="su_password" layoutX="22.0" layoutY="380.0" prefHeight="45.0" prefWidth="320.0" promptText="password" styleClass="textfield" stylesheets="@loginDesign.css" />
+            <Button fx:id="su_signupBtn" layoutX="81.0" layoutY="441.0" mnemonicParsing="false" onAction="#signup" prefHeight="45.0" prefWidth="220.0" styleClass="login-btn" stylesheets="@loginDesign.css" text="SignUp" textFill="WHITE">
               <font>
                 <Font size="17.0" />
               </font>
             </Button>
+                  <TextField fx:id="su_Id" layoutX="22.0" layoutY="213.0" prefHeight="45.0" prefWidth="320.0" promptText="Id" styleClass="textfield" stylesheets="@loginDesign.css" />
           </children>
         </AnchorPane>
         <AnchorPane fx:id="clientlogin_form" layoutX="10.0" layoutY="10.0" prefHeight="500.0" prefWidth="350.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
