--- a/src/main/resources/edu/metrostate/fitnessmanagementsystem/trainer.fxml
+++ b/src/main/resources/edu/metrostate/fitnessmanagementsystem/trainer.fxml
@@ -42,7 +42,7 @@
                            </children>
                         </AnchorPane>
                         <FontAwesomeIconView glyphName="USER" layoutX="407.0" layoutY="144.0" size="10em" />
-                        <Label layoutX="410.0" layoutY="183.0" text="Trainer">
+                        <Label fx:id="trainerUser" alignment="CENTER" layoutX="369.0" layoutY="183.0" prefHeight="32.0" prefWidth="175.0" text="Trainer">
                            <font>
                               <Font name="Tahoma" size="25.0" />
                            </font>
