--- a/src/main/resources/edu/metrostate/fitnessmanagementsystem/client.fxml
+++ b/src/main/resources/edu/metrostate/fitnessmanagementsystem/client.fxml
@@ -89,12 +89,12 @@
                                        </font>
                                     </Label>
                                     <TextField fx:id="client_name" layoutX="373.0" layoutY="12.0" prefHeight="25.0" prefWidth="135.0" styleClass="textfield" stylesheets="@adminDesign.css" />
-                                    <Label layoutX="591.0" layoutY="16.0" text="Username:">
+                                    <Label layoutX="602.0" layoutY="22.0" text="Username:">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="username_client" layoutX="667.0" layoutY="14.0" prefHeight="25.0" prefWidth="135.0" styleClass="textfield" stylesheets="@adminDesign.css" />
+                                    <TextField fx:id="username_client" layoutX="678.0" layoutY="20.0" prefHeight="25.0" prefWidth="135.0" styleClass="textfield" stylesheets="@adminDesign.css" />
                                     <Label layoutX="14.0" layoutY="16.0" text="Client ID:">
                                        <font>
                                           <Font size="15.0" />
@@ -113,12 +113,12 @@
                                        </font>
                                     </Label>
                                     <TextArea fx:id="client_address" layoutX="385.0" layoutY="57.0" prefHeight="70.0" prefWidth="150.0" styleClass="textfield" stylesheets="@adminDesign.css" />
-                                    <Label layoutX="599.0" layoutY="69.0" text="Gender:">
+                                    <Label layoutX="624.0" layoutY="65.0" text="Gender:">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
                                     </Label>
-                                    <ComboBox fx:id="client_gender" layoutX="660.0" layoutY="67.0" prefWidth="150.0" promptText="Choose...." />
+                                    <ComboBox fx:id="client_gender" layoutX="685.0" layoutY="63.0" prefWidth="150.0" promptText="Choose...." />
                                     <Label layoutX="16.0" layoutY="117.0" text="Phone Number:">
                                        <font>
                                           <Font size="15.0" />
@@ -140,6 +140,12 @@
                                           <String fx:value="btn" />
                                        </styleClass>
                                     </Button>
+                                    <Label layoutX="637.0" layoutY="114.0" text="Email:">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="email_client" layoutX="688.0" layoutY="112.0" prefHeight="25.0" prefWidth="152.0" styleClass="textfield" stylesheets="@adminDesign.css" />
                                  </children>
                               </AnchorPane>
                            </children>
